--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
+    "open-color": "^1.6.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
