--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
+    "codemirror": "^5.35.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -30,10 +31,12 @@
     "immutable": "^3.8.2",
     "include-media": "^1.4.9",
     "jest": "20.0.4",
+    "marked": "^0.3.17",
     "object-assign": "4.1.1",
     "open-color": "^1.6.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "prismjs": "^1.11.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
@@ -43,6 +46,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-pender": "^1.1.15",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
