--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "include-media": "^1.4.9",
     "jest": "20.0.4",
     "marked": "^0.3.17",
+    "moment": "^2.21.0",
     "object-assign": "4.1.1",
     "open-color": "^1.6.2",
     "postcss-flexbugs-fixes": "3.2.0",
