--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "immutable": "^3.8.2",
     "include-media": "^1.4.9",
     "jest": "20.0.4",
+    "lodash": "^4.17.5",
     "marked": "^0.3.17",
     "moment": "^2.21.0",
     "object-assign": "4.1.1",
@@ -51,6 +52,7 @@
     "redux-actions": "^2.2.1",
     "redux-pender": "^1.1.15",
     "redux-thunk": "^2.2.0",
+    "remove-markdown": "^0.2.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
